--- a/products.anchor technology.html
+++ b/products.anchor technology.html
@@ -23,18 +23,18 @@
                 <li><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
         </nav>
-        <div>
-            +7(495) 970-70-05<div>Перезвонить</div>
+        <div id="connection" onclick="connection()">
+            +7(495) 970-70-05
+            <div id="Group"></div>
+            <div id="call_back">Перезвонить</div>
         </div>
     </header>
-    <nav>
-        <a href="index.html">Главная</a>
-        <hr>
-        <a href="products.html">Продукция</a>
-        <hr>
-        Анкерная техника
+    <nav id="nav">
+        <div>
+            <a href="index.html">Главная</a> | <a href="products.html">Продукция</a> | Анкерная техника
+        </div>
     </nav>
-    <main>
+    <main id="content" style="min-height:3900px;max-height:7620px">
         <h2>Анкерная техника</h2>
         <figure>
             <figcaption>
@@ -341,48 +341,53 @@
                 Преимущества: простой и быстрый монтаж
             </figcaption>
         </figure>
+        <hr>
     </main>
-    <hr>
-    <article>
-        <div>&#10006;</div>
+    <div id="blackout" style="height: 800px;"></div>
+    <article id="feedback">
+        <div onclick="x()">&#10006;</div>
         <h2>Заказать обратный звонок</h2>
         <form action="#">
-            <input type="text" placeholder="Ваше имя*"><br>
-            <input type="text" placeholder="Телефон*"><br>
-            <input type="text" placeholder="E-mail"><br>
-            <div>
-                <input type="checkbox" checked>
-                Я согласен с политикой обработки<br>
-                персональных данных
-                <br>
-                <input type="submit" value="Заказать">
-            </div>
+            <input type="text" placeholder="   Ваше имя*"><br>
+            <input type="text" placeholder="   Телефон*"><br>
+            <input type="text" placeholder="   E-mail"><br>
+            <input type="checkbox" id="jackdaw" name="data" checked>
+            <label for="jackdaw">
+                <div>
+                    <p>
+                        Я согласен с политикой обработки<br>
+                        персональных данных
+                    </p>
+                </div>
+            </label>
+            <br>
+            <input type="submit" value="Заказать">
         </form>
     </article>
     <footer>
         <nav>
             <table>
                 <tr>
-                    <td>ГЛАВНАЯ</td>
-                    <td>ПРОДУКЦИЯ</td>
+                    <td><a href="index.html">ГЛАВНАЯ</a></td>
+                    <td><a href="products.html">ПРОДУКЦИЯ</a></td>
                 </tr>
                 <tr>
-                    <td>КОМПАНИЯ</td>
-                    <td>КОНТАКТЫ</td>
+                    <td><a href="company.html">КОМПАНИЯ</a></td>
+                    <td><a href="contacts.html">КОНТАКТЫ</a></td>
                 </tr>
             </table>
             <table>
                 <tr>
-                    <td>Саморезы</td>
-                    <td>Анкерная техника</td>
+                    <td><a href="products.self-tapping screws.html">Саморезы</a></td>
+                    <td><a href="products.anchor technology.html">Анкерная техника</a></td>
                 </tr>
                 <tr>
-                    <td>Шурупы</td>
-                    <td>Метрика</td>
+                    <td><a href="products.screws.html">Шурупы</a></td>
+                    <td><a href="products.metriсs.html">Метрика</a></td>
                 </tr>
             </table>
         </nav>
-        <div>
+        <address>
             <p>
                 +7(495) 970-70-05<br>
                 <br>
@@ -391,7 +396,7 @@
                 <br>
                 sales@vegakrep.ru
             </p>
-        </div>
+        </address>
         <small>© vegakrep.ru 2010 - 2018. Все права защищены</small>
     </footer>
     <script src="script.js"></script>
