--- a/products.self-tapping screws.html
+++ b/products.self-tapping screws.html
@@ -23,18 +23,18 @@
                 <li><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
         </nav>
-        <div>
-            +7(495) 970-70-05<div>Перезвонить</div>
+        <div id="connection" onclick="connection()">
+            +7(495) 970-70-05
+            <div id="Group"></div>
+            <div id="call_back">Перезвонить</div>
         </div>
     </header>
-    <nav>
-        <a href="index.html">Главная</a>
-        <hr>
-        <a href="products.html">Продукция</a>
-        <hr>
-        Саморезы
+    <nav id="nav">
+        <div>
+            <a href="index.html">Главная</a> | <a href="products.html">Продукция</a> | Саморезы
+        </div>
     </nav>
-    <main>
+    <main id="content" style="min-height:2900px;max-height:5270px">
         <h2>Саморезы</h2>
         <figure>
             <figcaption>
@@ -226,7 +226,8 @@
                 нагрузках.<br>
                 <br>
                 <br>
-                Головка: шестигранная с буртом, под ключ 8мм, на шляпке знак маркировки в виде буквы «Х»<br>
+                Головка: шестигранная с буртом, под ключ 8мм, на шляпке знак<br>
+                маркировки в виде буквы «Х»<br>
                 Шайба: с плоской покладкой EPDM толщиной Ar=2,4-2,8мм;<br>
                 а=0,7-0,9мм<br>
                 Резьба: редкая<br>
@@ -287,48 +288,53 @@
                 Твердость поверностного слоя: 560 min HV
             </figcaption>
         </figure>
+        <hr>
     </main>
-    <hr>
-    <article>
-        <div>&#10006;</div>
+    <div id="blackout" style="height: 800px;"></div>
+    <article id="feedback">
+        <div onclick="x()">&#10006;</div>
         <h2>Заказать обратный звонок</h2>
         <form action="#">
-            <input type="text" placeholder="Ваше имя*"><br>
-            <input type="text" placeholder="Телефон*"><br>
-            <input type="text" placeholder="E-mail"><br>
-            <div>
-                <input type="checkbox" checked>
-                Я согласен с политикой обработки<br>
-                персональных данных
-                <br>
-                <input type="submit" value="Заказать">
-            </div>
+            <input type="text" placeholder="   Ваше имя*"><br>
+            <input type="text" placeholder="   Телефон*"><br>
+            <input type="text" placeholder="   E-mail"><br>
+            <input type="checkbox" id="jackdaw" name="data" checked>
+            <label for="jackdaw">
+                <div>
+                    <p>
+                        Я согласен с политикой обработки<br>
+                        персональных данных
+                    </p>
+                </div>
+            </label>
+            <br>
+            <input type="submit" value="Заказать">
         </form>
     </article>
     <footer>
         <nav>
             <table>
                 <tr>
-                    <td>ГЛАВНАЯ</td>
-                    <td>ПРОДУКЦИЯ</td>
+                    <td><a href="index.html">ГЛАВНАЯ</a></td>
+                    <td><a href="products.html">ПРОДУКЦИЯ</a></td>
                 </tr>
                 <tr>
-                    <td>КОМПАНИЯ</td>
-                    <td>КОНТАКТЫ</td>
+                    <td><a href="company.html">КОМПАНИЯ</a></td>
+                    <td><a href="contacts.html">КОНТАКТЫ</a></td>
                 </tr>
             </table>
             <table>
                 <tr>
-                    <td>Саморезы</td>
-                    <td>Анкерная техника</td>
+                    <td><a href="products.self-tapping screws.html">Саморезы</a></td>
+                    <td><a href="products.anchor technology.html">Анкерная техника</a></td>
                 </tr>
                 <tr>
-                    <td>Шурупы</td>
-                    <td>Метрика</td>
+                    <td><a href="products.screws.html">Шурупы</a></td>
+                    <td><a href="products.metriсs.html">Метрика</a></td>
                 </tr>
             </table>
         </nav>
-        <div>
+        <address>
             <p>
                 +7(495) 970-70-05<br>
                 <br>
@@ -337,7 +343,7 @@
                 <br>
                 sales@vegakrep.ru
             </p>
-        </div>
+        </address>
         <small>© vegakrep.ru 2010 - 2018. Все права защищены</small>
     </footer>
     <script src="script.js"></script>
