--- a/products.metriсs.html
+++ b/products.metriсs.html
@@ -173,8 +173,8 @@
             <input type="text" placeholder="   Ваше имя*"><br>
             <input type="text" placeholder="   Телефон*"><br>
             <input type="text" placeholder="   E-mail"><br>
-            <input type="checkbox" id="jackdaw" name="data" checked>
-            <label for="jackdaw">
+            <input type="checkbox" id="jackdaw2" name="data" checked>
+            <label for="jackdaw2">
                 <div>
                     <p>
                         Я согласен с политикой обработки<br>
