Полностью готовая верстка

--- a/company.html
+++ b/company.html
@@ -101,11 +101,11 @@
             </figure>
         </article>
     </main>
-    <div id="blackout"></div>
+    <div id="blackout" style="height: 3120px"></div>
     <article id="feedback">
         <div onclick="x()">&#10006;</div>
         <h2>Заказать обратный звонок</h2>
-        <form action="#">
+        <form id="sending_data" action="#">
             <input type="text" placeholder="   Ваше имя*"><br>
             <input type="text" placeholder="   Телефон*"><br>
             <input type="text" placeholder="   E-mail"><br>
