--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
     </main>
     <article id="questions">
         <h2>Остались вопросы? Напишите нам</h2>
-        <form action="#">
+        <form id="sending_data" action="#">
             <input type="text" placeholder="Ваше имя*"><br>
             <input type="text" placeholder="Телефон*"><br>
             <input type="text" placeholder="E-mail"><br>
             <textarea name="text" id="" cols="100" rows="10" placeholder="Комментарий"></textarea><br>
-            <input type="checkbox" id="jackdaw" name="data" checked>
+            <input id="jackdaw" type="checkbox" name="data" checked>
             <label for="jackdaw">
                 <div>
                     <p>
@@ -228,11 +228,11 @@
             <input type="submit" value="Отправить">
         </form>
     </article>
-    <div id="blackout"></div>
+    <div id="blackout" style="height: 3120px"></div>
     <article id="feedback">
         <div onclick="x()">&#10006;</div>
         <h2>Заказать обратный звонок</h2>
-        <form action="#">
+        <form id="sending_data" action="#">
             <input type="text" placeholder="   Ваше имя*"><br>
             <input type="text" placeholder="   Телефон*"><br>
             <input type="text" placeholder="   E-mail"><br>
