--- a/products.anchor technology.html
+++ b/products.anchor technology.html
@@ -343,11 +343,11 @@
         </figure>
         <hr>
     </main>
-    <div id="blackout" style="height: 800px;"></div>
+    <div id="blackout" style="height: 100%;"></div>
     <article id="feedback">
         <div onclick="x()">&#10006;</div>
         <h2>Заказать обратный звонок</h2>
-        <form action="#">
+        <form id="sending_data" action="#">
             <input type="text" placeholder="   Ваше имя*"><br>
             <input type="text" placeholder="   Телефон*"><br>
             <input type="text" placeholder="   E-mail"><br>
