--- a/products.html
+++ b/products.html
@@ -66,7 +66,7 @@
     <hr style="position: relative;top:-28px;z-index: 1;">
     <article id="questions">
         <h2>Остались вопросы? Напишите нам</h2>
-        <form action="#">
+        <form id="sending_data" action="#">
             <input type="text" placeholder="Ваше имя*"><br>
             <input type="text" placeholder="Телефон*"><br>
             <input type="text" placeholder="E-mail"><br>
@@ -83,11 +83,11 @@
             <input type="submit" value="Отправить">
         </form>
     </article>
-    <div id="blackout"></div>
+    <div id="blackout" style="height: 1760px"></div>
     <article id="feedback">
         <div onclick="x()">&#10006;</div>
         <h2>Заказать обратный звонок</h2>
-        <form action="#">
+        <form id="sending_data" action="#">
             <input type="text" placeholder="   Ваше имя*"><br>
             <input type="text" placeholder="   Телефон*"><br>
             <input type="text" placeholder="   E-mail"><br>
