--- a/contacts.html
+++ b/contacts.html
@@ -52,7 +52,7 @@
                 <br>
                 КПП 773301001
             </address>
-            <form action="#">
+            <form id="sending_data" action="#">
                 <input type="text" placeholder="Ваше имя*"><br>
                 <input type="text" placeholder="Телефон*"><br>
                 <input type="text" placeholder="E-mail"><br>
@@ -74,11 +74,11 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577336.7639727558!2d36.82512928156911!3d55.58074807696959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2z0JzQvtGB0LrQstCw!5e0!3m2!1sru!2sru!4v1564263209501!5m2!1sru!2sru"
             width="100%" height="475px" frameborder="0" style="position: relative;top: 160px;" allowfullscreen></iframe>
     </main>
-    <div id="blackout" style="height: 800px;"></div>
+    <div id="blackout" style="height: 1750px;"></div>
     <article id="feedback">
         <div onclick="x()">&#10006;</div>
         <h2>Заказать обратный звонок</h2>
-        <form action="#">
+        <form id="sending_data" action="#">
             <input type="text" placeholder="   Ваше имя*"><br>
             <input type="text" placeholder="   Телефон*"><br>
             <input type="text" placeholder="   E-mail"><br>
